export enum ContentType {
  PRODUCT = 'product',
  BLOG = 'blog',
  PAGE = 'page',
  CATEGORY = 'category',
}
