// CMS Database Schema with Approval Flow and RBAC
// Generated: 2025-11-08

// ============================================
// RBAC (Role-Based Access Control) Tables
// ============================================

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique]
  username varchar(100) [not null, unique]
  password_hash varchar(255) [not null]
  first_name varchar(100)
  last_name varchar(100)
  avatar_url varchar(500)
  is_active boolean [default: true]
  is_email_verified boolean [default: false]
  last_login_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    email
    username
    is_active
  }
}

Table roles {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(50) [not null, unique, note: 'e.g., Admin, Editor, Reviewer, Author, Publisher']
  description text
  is_system_role boolean [default: false, note: 'System roles cannot be deleted']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    name
  }
}

Table permissions {
  id uuid [pk, default: `gen_random_uuid()`]
  resource varchar(50) [not null, note: 'e.g., content, user, role, workflow']
  action varchar(50) [not null, note: 'e.g., create, read, update, delete, publish, approve']
  description text
  created_at timestamp [default: `now()`]
  
  indexes {
    (resource, action) [unique]
  }
}

Table user_roles {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  role_id uuid [not null, ref: > roles.id]
  assigned_by uuid [ref: > users.id]
  assigned_at timestamp [default: `now()`]
  expires_at timestamp [note: 'Optional expiration for temporary role assignments']
  
  indexes {
    (user_id, role_id) [unique]
    user_id
    role_id
  }
}

Table role_permissions {
  id uuid [pk, default: `gen_random_uuid()`]
  role_id uuid [not null, ref: > roles.id]
  permission_id uuid [not null, ref: > permissions.id]
  created_at timestamp [default: `now()`]
  
  indexes {
    (role_id, permission_id) [unique]
    role_id
    permission_id
  }
}

// ============================================
// CMS Content Management Tables
// ============================================

Table content_types {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(50) [not null, unique, note: 'e.g., article, page, blog_post, product']
  slug varchar(50) [not null, unique]
  description text
  schema jsonb [note: 'JSON schema defining custom fields for this content type']
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    slug
    is_active
  }
}

Table categories {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null]
  slug varchar(100) [not null, unique]
  description text
  parent_id uuid [ref: > categories.id, note: 'For hierarchical categories']
  sort_order int [default: 0]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    slug
    parent_id
    is_active
  }
}

Table content {
  id uuid [pk, default: `gen_random_uuid()`]
  content_type_id uuid [not null, ref: > content_types.id]
  title varchar(255) [not null]
  slug varchar(255) [not null]
  excerpt text
  body text
  custom_fields jsonb [note: 'Flexible fields based on content_type schema']
  featured_image_id uuid [ref: > media.id]
  
  // Status and workflow
  status varchar(20) [not null, default: 'draft', note: 'draft, pending_review, approved, rejected, published, archived']
  workflow_id uuid [ref: > workflows.id]
  current_step_id uuid [ref: > workflow_steps.id]
  
  // Metadata
  author_id uuid [not null, ref: > users.id]
  published_at timestamp
  scheduled_publish_at timestamp
  expires_at timestamp
  
  // SEO
  meta_title varchar(255)
  meta_description text
  meta_keywords text
  
  // Versioning
  version int [default: 1]
  parent_version_id uuid [ref: > content.id, note: 'Links to previous version']
  is_latest_version boolean [default: true]
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    slug
    status
    author_id
    content_type_id
    published_at
    workflow_id
    (slug, version)
  }
}

Table content_categories {
  id uuid [pk, default: `gen_random_uuid()`]
  content_id uuid [not null, ref: > content.id]
  category_id uuid [not null, ref: > categories.id]
  created_at timestamp [default: `now()`]
  
  indexes {
    (content_id, category_id) [unique]
    content_id
    category_id
  }
}

Table content_tags {
  id uuid [pk, default: `gen_random_uuid()`]
  content_id uuid [not null, ref: > content.id]
  tag_id uuid [not null, ref: > tags.id]
  created_at timestamp [default: `now()`]
  
  indexes {
    (content_id, tag_id) [unique]
    content_id
    tag_id
  }
}

Table tags {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(50) [not null, unique]
  slug varchar(50) [not null, unique]
  created_at timestamp [default: `now()`]
  
  indexes {
    slug
    name
  }
}

Table media {
  id uuid [pk, default: `gen_random_uuid()`]
  filename varchar(255) [not null]
  original_filename varchar(255) [not null]
  mime_type varchar(100) [not null]
  size_bytes bigint [not null]
  width int [note: 'For images']
  height int [note: 'For images']
  url varchar(500) [not null]
  thumbnail_url varchar(500)
  storage_path varchar(500) [not null]
  alt_text varchar(255)
  caption text
  uploaded_by uuid [not null, ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    uploaded_by
    mime_type
    created_at
  }
}

// ============================================
// Workflow and Approval System
// ============================================

Table workflows {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null]
  description text
  content_type_id uuid [ref: > content_types.id, note: 'Optional: workflow specific to content type']
  is_default boolean [default: false]
  is_active boolean [default: true]
  created_by uuid [not null, ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    content_type_id
    is_active
    is_default
  }
}

Table workflow_steps {
  id uuid [pk, default: `gen_random_uuid()`]
  workflow_id uuid [not null, ref: > workflows.id]
  name varchar(100) [not null, note: 'e.g., Initial Review, Content Review, Legal Review, Final Approval']
  description text
  step_order int [not null, note: 'Order of execution']
  required_approvals int [default: 1, note: 'Number of approvals needed to proceed']
  can_skip boolean [default: false]
  auto_approve boolean [default: false, note: 'Auto-approve if conditions met']
  timeout_hours int [note: 'Hours before step times out']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    workflow_id
    (workflow_id, step_order)
  }
}

Table workflow_step_assignees {
  id uuid [pk, default: `gen_random_uuid()`]
  workflow_step_id uuid [not null, ref: > workflow_steps.id]
  assignee_type varchar(20) [not null, note: 'user or role']
  user_id uuid [ref: > users.id, note: 'Specific user if assignee_type = user']
  role_id uuid [ref: > roles.id, note: 'Role if assignee_type = role']
  created_at timestamp [default: `now()`]
  
  indexes {
    workflow_step_id
    user_id
    role_id
  }
}

Table approval_requests {
  id uuid [pk, default: `gen_random_uuid()`]
  content_id uuid [not null, ref: > content.id]
  workflow_id uuid [not null, ref: > workflows.id]
  current_step_id uuid [ref: > workflow_steps.id]
  status varchar(20) [not null, default: 'pending', note: 'pending, approved, rejected, cancelled, expired']
  requested_by uuid [not null, ref: > users.id]
  requested_at timestamp [default: `now()`]
  completed_at timestamp
  notes text
  
  indexes {
    content_id
    workflow_id
    status
    requested_by
    current_step_id
  }
}

Table approval_actions {
  id uuid [pk, default: `gen_random_uuid()`]
  approval_request_id uuid [not null, ref: > approval_requests.id]
  workflow_step_id uuid [not null, ref: > workflow_steps.id]
  reviewer_id uuid [not null, ref: > users.id]
  action varchar(20) [not null, note: 'approved, rejected, requested_changes']
  comments text
  created_at timestamp [default: `now()`]
  
  indexes {
    approval_request_id
    workflow_step_id
    reviewer_id
    created_at
  }
}

// ============================================
// Notifications System
// ============================================

Table notifications {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  type varchar(50) [not null, note: 'approval_request, approval_approved, approval_rejected, content_published, etc.']
  title varchar(255) [not null]
  message text [not null]
  related_entity_type varchar(50) [note: 'content, approval_request, etc.']
  related_entity_id uuid [note: 'ID of related entity']
  is_read boolean [default: false]
  read_at timestamp
  created_at timestamp [default: `now()`]
  
  indexes {
    user_id
    is_read
    created_at
    (user_id, is_read)
  }
}

// ============================================
// Audit Log System
// ============================================

Table audit_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, note: 'User who performed the action']
  action varchar(50) [not null, note: 'create, update, delete, publish, approve, reject, etc.']
  entity_type varchar(50) [not null, note: 'content, user, role, workflow, etc.']
  entity_id uuid [not null, note: 'ID of affected entity']
  changes jsonb [note: 'JSON diff of changes made']
  ip_address varchar(45)
  user_agent text
  created_at timestamp [default: `now()`]
  
  indexes {
    user_id
    entity_type
    entity_id
    action
    created_at
    (entity_type, entity_id)
  }
}

// ============================================
// Comments and Collaboration
// ============================================

Table comments {
  id uuid [pk, default: `gen_random_uuid()`]
  content_id uuid [not null, ref: > content.id]
  user_id uuid [not null, ref: > users.id]
  parent_comment_id uuid [ref: > comments.id, note: 'For threaded comments']
  body text [not null]
  is_internal boolean [default: true, note: 'Internal comments not visible to public']
  is_resolved boolean [default: false]
  resolved_by uuid [ref: > users.id]
  resolved_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    content_id
    user_id
    parent_comment_id
    is_resolved
    created_at
  }
}

// ============================================
// Sessions (for authentication)
// ============================================

Table sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  token_hash varchar(255) [not null, unique]
  ip_address varchar(45)
  user_agent text
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]
  
  indexes {
    user_id
    token_hash
    expires_at
  }
}
